Updated website with style and links

--- a/index.html
+++ b/index.html
@@ -1,2 +1,40 @@
-Under construction
-<a href="http://www.dutchnaoteam.nl">Click here!</a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="m0re's homepage :)">
+  <meta name="keywords" content="m0re, m0re4u, homepage, dotfiles">
+  <meta name="author" content="Michiel van der Meer">
+
+  <!-- Linking CSS -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+
+  <div id="giraffe">
+    <div id="code-block">
+      <code>
+           ._ o o
+           \_`-)|_
+        ,""       \
+      ,"  ## |   ಠ ಠ.
+    ," ##   ,-\__    `.
+  ,"       /     `--._;)
+,"     ## /
+      </code>
+    </div>
+  </div>
+
+  <div id="text-links">
+    <center>
+      <h1>m0re</h1>
+    </center>
+    <center>
+      <ul id="links">
+        <li><a href="https://github.com/m0re4u">GitHub</a></li>
+        <li><a href="https://github.com/m0re4u/dotfiles">dotfiles</a></li>
+        <li><a href="http://www.dutchnaoteam.nl">DNT</a></li>
+        <li><a href="http://www.linkedin.com/in/michiel-meer">LinkedIn</a></li>
+      </ul>
+    </center>
+  </div>
+</body>
