--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <!-- Linking CSS -->
   <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- Favicon - created by http://www.favicomatic.com -->
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 </head>
 
 <body>
