--- a/teaching.html
+++ b/teaching.html
@@ -47,6 +47,7 @@
             <h3>Courses</h3>
             <p>Here's a list of courses I assist(ed) as a teaching assistant and lecturer at Leiden University.</p>
             <ul class="course-list">
+                <li><strong>2024 / 2025 BSc AI</strong> - NLP in Society @ TU Delft (guest lecture)</li>
                 <li><strong>2024 / 2025 BSc AI</strong> - Natural Language Processing @ Leiden University</li>
                 <li><strong>2023 / 2024 BSc CS</strong> - AIR Challenge @ Leiden University</li>
                 <li><strong>2022 / 2023 BSc CS</strong> - Software Engineering (project) @ Leiden University</li>
@@ -57,15 +58,13 @@
             </ul>
 
             <h3>Thesis Supervision</h3>
-            <p>As a postdoctoral researcher, I supervise BSc/MSc thesis students on topics related to my research. If
-                you're interested in a thesis on similar topics as my research, please contact me via email.</p>
+            <p>As a postdoctoral researcher, I supervise BSc/MSc thesis students on topics related to my research, or on the subjects below. If
+                you're interested in a thesis on similar topics, please contact me via email.</p>
 
             <h3>Open Projects</h3>
             <ul class="course-list">
-                <li><strong>MSc CS/AI</strong> - Mining Arguments and Values from Live Discussions. We will use an
-                    existing dataset to create a representation of the values held by a participant during a live
-                    discussion and create an overview of the arguments being communicated. We will combine both
-                    representations to find how values and argument interact in a real-life synchronous discussion.</li>
+                <li><b>ACORN</b> - Annotating Checkworthy Opinions with ReasoniNg<br/>
+                    <p style="padding-left: 20px;">Online misinformation spreads rapidly via social networks and deceptive websites posing as legitimate news sources. Identifying which information should be checked is the first step. In this project, you will link checkworthiness judgments to explicit human reasoning through human and machine annotation. </p></li>
             </ul>
 
             <h3>Completed Projects</h3>
